# timeline

./: Dockerfile.backend  Dockerfile.frontend  docker-compose.yml  nginx.conf  start.sh
.claude/: settings.local.json
backend/: pyproject.toml
backend/data/: timeline.db
backend/src/timeline/: config.py  database.py  main.py
backend/src/timeline/ai/: client.py  embeddings.py
backend/src/timeline/api/: events.py  health.py  imports.py  search.py  tags.py
backend/src/timeline/models/: __init__.py  connection.py  event.py  import_job.py  media.py  tag.py
backend/src/timeline/parsers/: __init__.py  base.py  calendar.py  photos.py  spotify.py  whatsapp.py
backend/src/timeline/pipeline/: coordinator.py  media_processor.py
backend/src/timeline/schemas/: event.py  import_job.py
backend/src/timeline/search/: fts.py  semantic.py
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.tsx  index.css
frontend/src/api/: client.ts  events.ts  imports.ts  search.ts
frontend/src/components/event/: EventDetail.tsx
frontend/src/components/import/: ImportWizard.tsx
frontend/src/components/search/: SearchBar.tsx
frontend/src/components/timeline/: TimelineView.tsx
frontend/src/components/ui/: sourceColors.ts
frontend/src/stores/: filterStore.ts  timelineStore.ts
frontend/src/types/: index.ts
