[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "timeline"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy>=2.0",
    "alembic>=1.14",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "python-multipart>=0.0.20",
    "httpx>=0.28",
    "pillow>=11.0",
    "piexif>=1.1.3",
    "icalendar>=6.1",
    "numpy>=2.0",
    "uuid-utils>=0.9",
    "aiofiles>=24.1",
    "python-dateutil>=2.9",
    "chardet>=5.2",
]

[tool.setuptools.packages.find]
where = ["src"]
